--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sass": "^1.48.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.2.0",
     "@types/node": "17.0.9",
     "@types/react": "17.0.38",
     "eslint": "8.7.0",
