--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.1",
+    "contentful": "^9.1.24",
     "gsap": "^3.9.1",
     "next": "12.0.8",
     "react": "17.0.2",
