--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "contentful-types-codegen": "contentful-typescript-codegen --output types/contentful.d.ts"
   },
   "dependencies": {
     "classnames": "^2.3.1",
@@ -21,6 +22,9 @@
     "@svgr/webpack": "^6.2.0",
     "@types/node": "17.0.9",
     "@types/react": "17.0.38",
+    "contentful-management": "^10.0.0",
+    "contentful-typescript-codegen": "^3.2.3",
+    "dotenv": "^16.0.0",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "typescript": "4.5.4"
